<resources>
    <string name="app_name">Amman Bus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


    <string name="line1">Al-Sweileh - Middle East Investment Co</string>
    <string name="line2">Al Hussein Sports City – Jordan National  Museum</string>


    <string name="path1">North-South Path</string>
    <string name="path2">South-North Path</string>

    <string name="day1">Saturday</string>
    <string name="day2">Sunday</string>
    <string name="day3">Monday</string>
    <string name="day4">Tuesday</string>
    <string name="day5">Wednesday</string>
    <string name="day6">Thursday</string>
    <string name="day7">Friday</string>

    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
</resources>
