<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.haya.user.SecondT"

    android:orientation="vertical"
    android:gravity="center_horizontal"

    >



    <Button
        android:layout_marginTop="60dp"
        android:id="@+id/btn5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/day1"
        android:textAllCaps="false"

        />

    <Button
        android:id="@+id/btn6"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/day2"
        android:textAllCaps="false"
        />

    <Button

        android:id="@+id/btn7"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/day3"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/btn8"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/day4"
        android:textAllCaps="false"
        />
    <Button

        android:id="@+id/btn9"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/day5"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/btn10"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/day6"
        android:textAllCaps="false"
        />

    <Button

        android:id="@+id/btn11"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/day7"
        android:textAllCaps="false"
        />


</LinearLayout>
